--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Work</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="boostrap.style.css">
+    <!-- <link rel="stylesheet" href="boostrap.style.css"> -->
     <link rel="stylesheet" href="custom.css">
 </head>
 
@@ -16,19 +16,18 @@
 
     <div class="container">
 
-        <header class="myheader">
+        <header>
+            <div class="row align-items-center pb-2 border-bottom ">
 
-            <div class="row align-items-center mb-2 pb-2 border-bottom">
-
-                <div class="col">
+                <div class="col-4">
                     <a class="head1" href="#">Subscribe</a>
                 </div>
 
-                <div class="col text-center">
+                <div class="col-4 text-center">
                     <a class="head2" href="#">Large</a>
                 </div>
 
-                <div class="col text-end">
+                <div class="blessing col-4 text-end">
                     <a href="#" class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-search" viewBox="0 0 16 16">
@@ -66,7 +65,26 @@
 
         </div> -->
 
-        <div class="space">
+        <!--  <div class="space">
+            <nav class="nav d-flex justify-content-between">
+            <ul class="d-flex justify-content-between list-unstyled overflow:scroll">
+                <li><a class="p-2 link-secondary" href="#">World</a></li>
+                <li> <a class="p-2 link-secondary" href="#">U.S.</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Technology</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Design</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Culture</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Business</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Politics</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Opinion</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Science</a> </li>
+                <li> <a class="p-2 link-secondary" href="#">Health</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Style</a></li>
+                <li> <a class="p-2 link-secondary" href="#">Travel</a></li>
+            </ul>
+            </nav>
+        </div>-->
+
+        <div class="wrapper">
             <nav class="nav d-flex justify-content-between">
                 <a class="p-2 link-secondary" href="#">World</a>
                 <a class="p-2 link-secondary" href="#">U.S.</a>
