--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>-->
 
         <div class="wrapper">
-            <nav class="nav d-flex justify-content-between">
+            <!-- <nav class="nav d-flex justify-content-between"> -->
                 <a class="p-2 link-secondary" href="#">World</a>
                 <a class="p-2 link-secondary" href="#">U.S.</a>
                 <a class="p-2 link-secondary" href="#">Technology</a>
@@ -98,7 +98,7 @@
                 <a class="p-2 link-secondary" href="#">Health</a>
                 <a class="p-2 link-secondary" href="#">Style</a>
                 <a class="p-2 link-secondary" href="#">Travel</a>
-            </nav>
+            <!-- </nav> -->
         </div>
 
 
